Add eclipse ecal recipe

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,5 +11,5 @@ BBFILE_PRIORITY_autoipc = "5"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_autoipc = "1"
-LAYERDEPENDS_autoipc = "core"
+LAYERDEPENDS_autoipc = "core openembedded-layer"
 LAYERSERIES_COMPAT_autoipc = "scarthgap"
